--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   intl_utils: ^2.8.7
   provider: ^6.1.2
   dotted_border: ^2.1.0
+  flutter_rating_bar: ^4.0.1
+  go_router: ^14.3.0
 
 dev_dependencies:
   build_runner:
