--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,27 @@ dependencies:
   provider: ^6.1.2
   dotted_border: ^2.1.0
   flutter_rating_bar: ^4.0.1
-  go_router: ^14.3.0
+  go_router: ^14.4.1
+  flutter_riverpod: ^2.6.1
+  equatable: ^2.0.5
+  fl_chart: ^0.69.0
+  google_maps_flutter: ^2.10.0
+  flutter_polyline_points: ^2.1.0
+  location: ^7.0.1
+  permission_handler: ^11.3.1
+  geolocator: ^13.0.2
+  flutter_lints: ^5.0.0
+  riverpod_lint: ^2.6.3
+  freezed: ^2.5.7
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   build_runner:
   flutter_gen_runner:
+  json_serializable: ^6.9.0
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^4.0.0
 
 
 flutter:
